--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
         sendBtn.addEventListener('click', () => {
             const texto = pedido.join('%0A');
             if (!texto) { alert('El pedido está vacío'); return; }
-            const numero = '+549XXXXXXXXXX';
+            const numero = '+5491168497526';
             const url = `https://wa.me/${numero}?text=${texto}`;
             window.open(url, '_blank');
         });
