ajustes selectores y descripcion

--- a/index.html
+++ b/index.html
@@ -235,9 +235,9 @@
     <!-- =================================SCRIPT====================================== -->
     <script>
         /* ---------- datos ---------- */
-        const productos = ["asado", "vacío", "bife sin lomo", "bife chorizo", "cuadril", "paleta", "roastbeef", "colita", "peceto", "nalga", "bola", "cuadrada", "matambre", "entraña", "espinazo", "tortuguita", "tortuga", "palomita", "paloma", "tapa", "cima", "falda", "media completa", "media entera", "tapa asado", "falda puchero", "osobuco", "cajón pollo", "cajón patamuslo", "cajón suprema", "cajón huevo", "alita", "menudo", "alita y menudos", "menudo alita", "cajón alita", "cajón menudo", "picada comun", "picada especial", "grasa picada", "grasa", "patitas cerdo", "pernil", "paleta de cerdo", "carré", "provoleta", "parmesano", "carbon", "salchicha parrillera"].sort();
+        const productos = ["asado", "vacío", "bife sin lomo", "bife con lomo", "bife de chorizo", "cuadril", "paleta", "roastbeef", "colita de cuadril", "peceto", "nalga", "bola de lomo", "cuadrada", "matambre", "entraña", "espinazo", "tortuguita", "palomita", "tapa de asado", "cima", "falda", "media completa", "media entera", "tapa de asado", "falda puchero", "osobuco", "cajón de pollo", "cajón de patamuslo", "cajón de suprema", "cajón de huevo", "alitas", "alitas y menudos", "picada comun", "picada especial", "grasa picada", "patitas cerdo", "pernil", "paleta de cerdo", "carré", "provoleta", "parmesano", "carbon", "salchicha parrillera"].sort();
 
-        const productosPorKg = ["picada comun", "picada especial", "grasa picada", "grasa"];
+        const productosPorKg = ["picada comun", "picada especial", "grasa picada"];
 
         /* ---------- nodos ---------- */
         const select = document.getElementById('producto');
