picadas agregadas y icono nuevo

--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
     <!-- =================================SCRIPT====================================== -->
     <script>
         /* ---------- datos ---------- */
-        const productos = ["asado", "vacío", "bife sin lomo", "bife con lomo", "bife de chorizo", "cuadril", "paleta", "roastbeef", "colita de cuadril", "peceto", "nalga", "bola de lomo", "cuadrada", "matambre", "entraña", "espinazo", "tortuguita", "palomita", "tapa de asado", "cima", "falda", "media completa", "media entera", "falda puchero", "osobuco", "cajón de pollo", "cajón de patamuslo", "cajón de suprema", "cajón de huevo", "alitas", "alitas y menudos", "patitas cerdo", "pernil", "paleta de cerdo", "carré", "provoleta", "parmesano", "carbon", "salchicha parrillera"].sort();
+        const productos = ["asado", "vacío", "bife sin lomo", "bife con lomo", "bife de chorizo", "cuadril", "paleta", "roastbeef", "colita de cuadril", "peceto", "nalga", "bola de lomo", "cuadrada", "matambre", "entraña", "espinazo", "tortuguita", "palomita", "tapa de asado", "cima", "falda","picada común", "picada especial", "grasa picada", "media completa", "media entera", "falda puchero", "osobuco", "cajón de pollo", "cajón de patamuslo", "cajón de suprema", "cajón de huevo", "alitas", "alitas y menudos", "patitas cerdo", "pernil", "paleta de cerdo", "carré", "provoleta", "parmesano", "carbon", "salchicha parrillera"].sort();
 
         const productosPorKg = ["picada comun", "picada especial", "grasa picada"];
 
