--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
             border-top: 2px solid #ddd;
             margin-top: 1rem;
             display: flex;
-            flex-wrap: wrap;
+            flex-wrap: nowrap;
             /* Permite que los botones se ajusten en pantallas pequeñas */
             justify-content: center;
             gap: 10px;
