--- a/index.html
+++ b/index.html
@@ -149,7 +149,9 @@
 
         .acciones button:last-child {
             background: #28a745;
-            padding-left: 15px;
+            padding-top: 1rem;
+            padding-bottom: 2rem;
+            
 
         }
 
