ultimas mejoras en los botones debajo wrap

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
             border-top: 2px solid #ddd;
             margin-top: 1rem;
             display: flex;
-            flex-wrap: nowrap;
+            flex-wrap: wrap;
             /* Permite que los botones se ajusten en pantallas pequeñas */
             justify-content: center;
             gap: 10px;
@@ -150,7 +150,9 @@
         .acciones button:last-child {
             background: #28a745;
             padding-top: 1rem;
-            padding-bottom: 2rem;
+            padding-bottom: 1rem;
+            padding-left: 0.5rem;
+            padding-right: 0.5rem;
             
 
         }
