--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Alumni+Sans+SC:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
+        <link rel="manifest" href="manifest.json">
+
     <style>
         * {
             box-sizing: border-box;
@@ -362,6 +364,7 @@
         renderLista();
     </script>
     <script src="https://unpkg.com/@dotlottie/player-component@2.7.12/dist/dotlottie-player.mjs" type="module"></script>
+    <script src="service-worker.js"></script>
 
 </body>
 
