--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
 
         .modal-content {
             background: white;
-            padding: 1rem;
+            padding: 2rem;
             border-radius: 10px;
             max-width: 90%;
             max-height: 80vh;
@@ -189,6 +189,7 @@
         .modal ul {
             margin: 1rem 0;
             font-size: 2rem;
+            list-style: none;
         }
 
         .modal-content button {
